# linguistflow

./: .env.example  GITHUB_SECRETS_GUIDE.md  HOSTINGER_DEPLOYMENT.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  fix_anim.py  fix_breakout.py
.agents/rules/: adfs.html  agent_prompt.md  autopilot.md  editorrule.md  lol.css  lol.html  python_fstring_css.md  triparity.md  wcode.md  wcode.php  wlol.css
.github/workflows/: deploy.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  drafts_store.json  pyproject.toml  schedule_store.json  schema.sql  test.db  test_bg.py  test_openalex.py
backend/app/: geo_engine.py  main.py  worker.py
backend/app/api/: auth.py  blogs.py  content.py  integrations.py  posts.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: blog.py  customer.py  post.py  schedule.py
backend/app/services/: autonomous_agent.py  compliance.py  content_engine.py  image_engine.py  scheduler.py  topic_discovery.py
backend/migrations/: add_visual_opts_ghost_data.sql
frontend/: check_api.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: LoadingScreen.tsx
frontend/src/components/ui/: ContentCard.tsx  (+2 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Login.tsx  Onboarding.tsx  Register.tsx  Schedule.tsx
landing/: index.html
widget/: index.html  package-lock.json  package.json  vite.config.ts
widget/src/: main.ts  style.css
(+1 files in other folders)
